# fabrics_ros

./: .gitignore  README.md  requirements.txt
.github/workflows/: fabrics_ros_test.yml  script.sh
fabrics_bridge/: CMakeLists.txt  package.xml  setup.py
fabrics_bridge/config/: albert.urdf  albert_optuna_config.yaml  albert_real.urdf  boxer.urdf  boxer_optuna_config.yaml  dingo_kinova.urdf  exp.yaml  fabric.yaml  fabrics_albert_config.yaml  fabrics_albert_tune_config.yaml  fabrics_albert_visualization.rviz  fabrics_boxer_config.yaml  fabrics_boxer_tune_config.yaml  fabrics_boxer_visualization.rviz  fabrics_config.yaml  fabrics_kinova_config.yaml  fabrics_kuka_config.yaml  fabrics_panda_config.yaml  fabrics_panda_goal_only_config.yaml  fabrics_panda_minimal_config.yaml  fabrics_panda_plus_config.yaml  fabrics_panda_tune_config.yaml  fabrics_panda_visualization.rviz  fabrics_pointrobot_config.yaml  fabrics_visualization.rviz  matlab_iiwa14.urdf  optuna_config.yaml  pandaplus.urdf  test.urdf
fabrics_bridge/launch/: fabrics_albert_node.launch  fabrics_boxer_node.launch  fabrics_client.launch  fabrics_demo.launch  fabrics_goal_only_node.launch  fabrics_interactive_marker.launch  fabrics_kinova_node.launch  fabrics_kuka_node.launch  fabrics_node.launch  fabrics_panda_node.launch  tune_albert.launch  (+6 more)
fabrics_msgs/: CMakeLists.txt  package.xml
fabrics_msgs/msg/: ControlRequestKuka.msg  FabricGoal.msg  FabricGoalArray.msg  FabricsConstraint.msg  FabricsConstraintsGoal.msg  FabricsGoal.msg  FabricsGoalArray.msg  FabricsJointSpaceGoal.msg  FabricsObstacle.msg  FabricsObstacleArray.msg  FabricsPoseGoal.msg  FabricsState.msg
fabrics_processing/: CMakeLists.txt  package.xml
rviz/: demo.rviz
(+99 files in other folders)
