<?xml version="1.0"?>
<package format="2">
  <name>fabrics_msgs</name>
  <version>0.0.0</version>
  <description>The fabrics_msgs package</description>

  <maintainer email="t.c.chiang@tudelft.nl">karen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
